--- a/Linear Regression/Ecommerce_Project.ipynb
+++ b/Linear Regression/Ecommerce_Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Regression on New York's Ecommerce Giant"
+    "# Linear Regression on New York City's Ecommerce Giant"
    ]
   },
   {
